src/test/compile-fail/issue-3099-b.rs
#[legacy_exports]
mod a {}

#[legacy_exports]
mod a {} //~ ERROR Duplicate definition of module a

fn main() {}
